[package]
name = "openssh-tmux"
description = "Library to programmatically run commands in a remote tmux session over openssh to avoid aborted commands when the ssh session is interrupted"
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
publish = false

exclude = [ ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.thiserror]
version = "~1.0"

[dependencies.futures]
version = "~0.3"

[dependencies.tracing]
version = "~0.1"

[dev-dependencies.pretty_assertions]
version = "~1.0"
