[package]
name = "openssh-tmux"
description = "Library to programmatically run commands in a remote tmux session over openssh to avoid aborted commands when the ssh session is interrupted"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/openssh-tmux"
keywords = [ "openssh", "tmux" ]
categories = [ "network-programming" ]
exclude = [ ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.thiserror]
version = "1.0.31"

[dependencies.futures]
version = "0.3.21"

[dependencies.tracing]
version = "0.1.35"

[dependencies.postage]
version = "0.5.0"

[dependencies.tokio]
version = "~1"
features = [ "full" ]

[dependencies.tokio-util]
version = "0.7.3"
features = ["io"]

[dependencies.tokio-stream]
version = "0.1.9"
features = ["io-util"]

[dependencies.pin-project]
version = "1.0.11"

[dependencies.derive_more]
version = "0.99.17"

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]

[dependencies.openssh]
version = "0.9.4"

[dev-dependencies.tracing-test]
version = "0.2.1"

[dev-dependencies.dotenv]
version = "0.15.0"
