[package]
name = "openssh-tmux"
description = "Library to programmatically run commands in a remote tmux session over openssh to avoid aborted commands when the ssh session is interrupted"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.2.2"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/openssh-tmux"
keywords = [ "openssh", "tmux" ]
categories = [ "network-programming" ]
exclude = [ ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.thiserror]
version = "1.0.63"

[dependencies.futures]
version = "0.3.30"

[dependencies.tracing]
version = "0.1.40"

[dependencies.postage]
version = "0.5.0"

[dependencies.tokio]
version = "1.39.2"
features = [ "full" ]

[dependencies.tokio-util]
version = "0.7.11"
features = ["io"]

[dependencies.tokio-stream]
version = "0.1.15"
features = ["io-util"]

[dependencies.pin-project]
version = "1.1.5"

[dependencies.derive_more]
version = "1.0.0"
features = ["from_str", "display"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dependencies.openssh]
version = "0.11.0"

[dev-dependencies.tracing-test]
version = "0.2.5"

[dev-dependencies.dotenvy]
version = "0.15.7"
